--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  sudo: yes
+  become: yes
   tasks:
     - name: Upgrade VM package manager
       apt: upgrade=dist
@@ -10,7 +10,7 @@
       apt: update_cache=yes
 
 - hosts: all
-  sudo: yes
+  become: yes
   roles:
     - angstwad.docker_ubuntu
   tasks:
